fixed spacing issues

--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -7,9 +7,22 @@
   max-width: 640px;
 }
 
+@media screen and (max-width: 1024px) {
+  .lead__subtitle {
+    margin: 0 auto 56px;
+  }
+}
+
+
 @media screen and (max-width: 720px) {
   .lead__subtitle {
     font-size: 16px;
     line-height: 20px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .lead__subtitle {
+    margin: 0 auto 40px;
   }
 }
